# pm

./: .env.example  CLAUDE.md  Dockerfile
backend/: AGENTS.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  errors.py  logging_config.py  main.py  models.py  openrouter.py
backend/app/services/: __init__.py  board.py  chat.py  operations.py  reordering.py
backend/tests/: test_api.py  test_chat.py  test_chat_structured.py
docs/: DATABASE.md  PLAN.md  code_review.md  db-schema.json
frontend/: AGENTS.md  package-lock.json  playwright.config.ts  vitest.config.ts
frontend/src/app/: page.test.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
frontend/src/lib/: kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: publish-ghcr.sh
