[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "bcrypt==4.2.1",
  "fastapi==0.115.8",
  "httpx==0.28.1",
  "pyjwt==2.10.1",
  "pytest==8.3.4",
  "pytest-cov==5.0.0",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
  "slowapi==0.1.9",
  "uvicorn==0.34.0",
]

[tool.uv]
package = false
